# praetor

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  DIRECTORY.md  LICENSE  README.md  justfile
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
config/: alice-peers.json  alice.mcp.json  bob-peers.json  bob.mcp.json  settings.alice.json  settings.bob.json
contrib/: interlink-bus.service  peer-admin-guard.sh  pretooluse-guard.sh  stop-hook.sh
contrib/agents/: read-only.md
docs/: DELIVERY.md  DEPLOY.md  DISCOVERY.md  PRESENCE.md  SESSIONS-AUDIT.md  SESSIONS.md  TASKS.md  demo.cast
experiments/: README.md  live_channel_test.py  live_scoped_test.py
npm/: .gitignore  README.md  install.js  package.json
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/agents/: dev.md  read-only.md
plugin/hooks/: hooks.json
plugin/skills/interlink/: SKILL.md
plugin/skills/praetor/: SKILL.md
scripts/: demo.sh
src/: agent.rs  bus.rs  hook.rs  identity.rs  lib.rs  mcp.rs  policy.rs  store.rs
