[package]
# NOTE: placeholder name. The escapement (Stop-hook) design was superseded by
# Claude Code channels; this crate is now the bus + per-agent channel server.
# Rename once, at the end.
name = "escapement"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/wilfreddenton/escapement"
description = "Agent-to-agent messaging for Claude Code, over channels"
keywords = ["claude-code", "mcp", "agents", "ai", "channel"]
categories = ["command-line-utilities", "asynchronous"]
readme = "README.md"

# Pure Rust, no C dependencies — enforced in CI.
# TLS is deliberately absent: the bus binds 127.0.0.1, and authenticity comes
# from Ed25519 message signatures rather than from the transport. That is also
# what keeps the tree free of `ring`, and therefore trivially cross-compilable.

[features]
default = ["bus", "identity"]
bus = ["dep:axum", "dep:hyper", "dep:hyper-util", "dep:tower-service", "dep:dashmap", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:clap"]
identity = ["dep:ed25519-dalek", "dep:getrandom", "dep:base64", "dep:clap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

clap = { version = "4", features = ["derive", "env"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

axum = { version = "0.8", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"], optional = true }
tower-service = { version = "0.3", optional = true }
dashmap = { version = "6", optional = true }

# defaults are ["fast", "zeroize"]; keys are seeded from getrandom rather than
# enabling the rand_core feature, which keeps RNG trait versions out of it.
ed25519-dalek = { version = "3", optional = true }
getrandom = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

[[bin]]
name = "escapement-bus"
path = "src/bin/escapement-bus.rs"
required-features = ["bus"]

[[bin]]
name = "escapement-keygen"
path = "src/bin/escapement-keygen.rs"
required-features = ["identity"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
