[package]
name = "interlink-mcp"
version = "0.7.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/wilfreddenton/interlink"
description = "Cryptographically-authenticated, cross-machine agent-to-agent chat for Claude Code, over MCP channels"
keywords = ["claude-code", "mcp", "agents", "ai", "channel"]
categories = ["command-line-utilities", "asynchronous"]
readme = "README.md"

# `interlink` is taken on crates.io, so the package publishes as `interlink-mcp`
# while the library keeps the short name used throughout the code (`use interlink::`).
[lib]
name = "interlink"
path = "src/lib.rs"

# Pure Rust, no C dependencies — enforced in CI.
# TLS is deliberately absent: the bus binds 127.0.0.1, and authenticity comes
# from Ed25519 message signatures rather than from the transport. That is also
# what keeps the tree free of `ring`, and therefore trivially cross-compilable.

[features]
default = ["bus", "agent"]
bus = ["persist", "dep:axum", "dep:hyper", "dep:hyper-util", "dep:tower-service", "dep:dashmap", "dep:tokio", "dep:tracing", "dep:tracing-subscriber", "dep:clap"]
identity = ["dep:ed25519-dalek", "dep:getrandom", "dep:base64", "dep:clap"]
# the per-agent channel server (MCP over stdio, pushes into a live session)
agent = ["identity", "persist", "dep:rmcp", "dep:schemars", "dep:reqwest", "dep:tokio", "dep:tracing", "dep:tracing-subscriber"]
# durable, keep-until-acked queue (redb, pure Rust); shared by bus and agent
persist = ["dep:redb", "dep:tokio", "dep:tracing"]

[dependencies]
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

clap = { version = "4", features = ["derive", "env"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

axum = { version = "0.8", optional = true }
hyper = { version = "1", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"], optional = true }
tower-service = { version = "0.3", optional = true }
dashmap = { version = "6", optional = true }

# defaults are ["fast", "zeroize"]; keys are seeded from getrandom rather than
# enabling the rand_core feature, which keeps RNG trait versions out of it.
ed25519-dalek = { version = "3", optional = true }
getrandom = { version = "0.3", optional = true }
base64 = { version = "0.22", optional = true }

# pure-Rust embedded ACID store for the durable queue
redb = { version = "4", optional = true }

# no TLS features: the agent talks plain HTTP to a loopback bus
reqwest = { version = "0.13", default-features = false, features = ["json", "query"], optional = true }
rmcp = { version = "2", features = ["server", "transport-io", "macros"], optional = true }
schemars = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"

[[bin]]
name = "interlink-bus"
path = "src/bin/interlink-bus.rs"
required-features = ["bus"]

[[bin]]
name = "interlink-keygen"
path = "src/bin/interlink-keygen.rs"
required-features = ["identity"]

[[bin]]
name = "interlink-mcp"
path = "src/bin/interlink-mcp.rs"
required-features = ["agent"]

[[bin]]
name = "interlinked"
path = "src/bin/interlinked.rs"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
